...
                        context,
                        MaterialPageRoute(builder: (_) => const PelaporanPage()),
                      ),
                    ),
                    HomeMenuItem(
                      icon: Icons.history,
                      label: 'Riwayat',
                      onTap: () => Navigator.push(
                        context,
                        MaterialPageRoute(builder: (_) => const RiwayatPage()),
                      ),
                    ),
                    HomeMenuItem(
...
                  crossAxisAlignment: CrossAxisAlignment.start,
                  children: [
                    Row(
                      mainAxisAlignment: MainAxisAlignment.spaceBetween,
                      children: [
                        const Text(
                          "Berita Terbaru",
                          style: TextStyle(
                            fontSize: 18,
                            fontWeight: FontWeight.bold,
                            color: Colors.white,
                          ),
                        ),
...
