...
                    ),
                  ),

                  const SizedBox(height: 30),

                  MainButton(
                    text: "Get Started",
                    onPressed: () {
                      Navigator.pushReplacement(
                        context,
                        MaterialPageRoute(builder: (_) => const LoginPage()),
                      );
                    },
...
